# release-it

./: .gitignore  README.md
auth/: .dockerignore  Dockerfile  pyproject.toml
auth/app/: config.py  db.py  deps.py  keys.py  main.py  security.py  user_management.py  users_repo.py
auth/chart/: values.yaml
auth/chart/templates/: auth.yaml
auth/migrations/: 0001_init.sql  0002_username_case_insensitive_unique.sql
auth/tests/: test_tokens.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: config.py  document.py  environment.py  product.py  release.py  solution.py  workflow.py
backend/app/config/: states.yaml
backend/app/core/: config.py  jwt_verify.py
backend/app/db/: migrate.py  pool.py
backend/app/integrations/: jira.py  llm.py  pipeline.py  trackers.py
backend/app/repositories/: config.py  documents.py  environments.py  jira_issues.py  products.py  releases.py  solutions.py  sync_filters.py  workflow.py
backend/app/schemas/: models.py
backend/app/services/: appconfig.py  audit.py  state_machine.py  workflow.py
backend/chart/: Chart.yaml  values.yaml
backend/chart/templates/: backend.yaml
backend/migrations/: 0001_init.sql  0002_jira_issues.sql  0003_config_and_check_templates.sql  0004_product_tracker_repo.sql  0005_release_sync_filter.sql  0006_workflow_graph.sql  0007_documents.sql
backend/tests/: test_state_machine.py
deploy/: docker-compose.yml  minikube-deploy.sh  minikube-dnat.sh
docs/: release-it.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  (+2 more)
(+38 files in other folders)
