[project]
name = "releaseit-backend"
version = "0.1.0"
description = "ReleaseIT backend API — release lifecycle management"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlparse>=0.5",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
